--- a/styles/style.css
+++ b/styles/style.css
@@ -300,7 +300,7 @@ h1 {
 h2 {
   color: white;
   font-size: 2.4rem;
-  letter-spacing: 7px;
+  letter-spacing: 8px;
   text-transform: lowercase;
 }
 
@@ -715,8 +715,7 @@ header {
   padding-bottom: 50px;
 }
 .projects h3 {
-  text-transform: capitalize;
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   margin-bottom: 20px;
   letter-spacing: 5px;
 }
@@ -911,6 +910,9 @@ a.partnerLink {
       -ms-flex-align: center;
           align-items: center;
 }
+.formContainer h2 {
+  text-align: center;
+}
 .formContainer p {
   background: #d0a8b1;
   font-size: 0.9rem;
@@ -1029,6 +1031,16 @@ footer p {
   .aboutRight ul {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+  .aboutRight li {
+    width: 50%;
+    padding-top: 20px;
   }
   .headerFlex {
     -webkit-box-orient: vertical;
@@ -1078,9 +1090,6 @@ footer p {
   }
   .aboutRight p {
     padding-left: 0;
-  }
-  .aboutRight li {
-    margin: 20px 40px;
   }
   .aboutRight i {
     padding-left: 0;
@@ -1235,7 +1244,7 @@ footer p {
 @media (max-width: 540px) {
   h1 {
     font-size: 3.5rem;
-    letter-spacing: 3px;
+    letter-spacing: 5px;
   }
   .headerFlex h2 {
     font-size: 1.8rem;
@@ -1250,14 +1259,20 @@ footer p {
   .aboutContainer img {
     width: 65%;
   }
-  .aboutRight p {
-    font-size: 0.8rem;
+  .aboutRight li p {
+    font-size: 0.65rem;
+  }
+  .aboutRight li i {
+    font-size: 1.6rem;
   }
   .skillsFlex p {
     font-size: 0.7rem;
   }
   .skillsFlex i {
     font-size: 1.8rem;
+  }
+  .skillsFlex li {
+    width: 33.3333333333%;
   }
   .projectContainer {
     padding: 20px 10px;
